# efcf-evm2cpp

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md
contracts/: .gitignore  Addition.sol  AdditionTest.sol  Makefile  baby_bank.sol  crowdsale.sol  crytic_complex_example.sol  echidna_boom_suicidal.sol  echidna_testme_twogates.sol  grid.sol  projectkudos.sol  simpledao.sol  suicidal.sol  suicidal_cond.sol  suicidal_magic_cond.sol  teether_test.sol  teether_test_if.sol
docker/: arch.Dockerfile  ubuntu.Dockerfile
scripts/: install-deps.ubuntu.sh  remove-metadata-blocks.py  run-on-all-contracts.sh  try-build-all-contracts.sh
src/: analysis.rs  codegen.rs  combinedjson.rs  instructions.rs  main.rs  sourcemap.rs
