[package]
name = "evm2cpp"
version = "0.4.0"
authors = ["Michael Rodler <michael.rodler@paluno.uni-due.de>"]
edition = "2018"
license = "GPLv3"

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
clap = "3.1"
ethereum-hexutil = "0.2"
lazy_static = "1.4"
#primitive-types = "0.9"
ethereum-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
